fixed minor alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1127,7 +1127,8 @@ a { color: inherit; text-decoration: none; }
   font-weight: 700;
   color: var(--primary);
   margin-bottom: 3rem;
-  padding-left: 2rem;
+  text-align: center;
+  padding: 0;
 }
 
 .contact-wrapper {
